--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,12 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
+
+todo/node_modules
+todo/.vscode
+todo/dist
+todo/.angular/cache
+
 # Visual Studio Code
 todo/.vscode/mcp.json
 !.vscode/settings.json
