--- a/todo/angular.json
+++ b/todo/angular.json
@@ -25,8 +25,15 @@
               }
             ],
             "styles": [
-              "src/styles.css"
-            ]
+              "/node_modules/bootstrap/dist/css/bootstrap.css",
+              "@angular/material/prebuilt-themes/magenta-violet.css",
+              "src/styles.scss"
+            ],
+            "scripts": [
+            "./node_modules/@popperjs/core/dist/umd/popper.min.js",
+            "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+            "./node_modules/jquery/dist/jquery.min.js"
+          ]
           },
           "configurations": {
             "production": {
